apps/applets/hello/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - secretName: applets-hello-tls
      hosts:
        - hello.omni.cedille.club
  rules:
    - host: hello.omni.cedille.club
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hello-svc
                port:
                  number: 8080
